change for overlapping home page issue

--- a/src/components/BackGroundImgStyles.css
+++ b/src/components/BackGroundImgStyles.css
@@ -72,6 +72,7 @@
     }
     .background .content p{
         font-size: 1.4rem;
+        padding-top: 25px;
         
        
 
